@@ -65,7 +65,7 @@ img#scroll_calendar:hover{
 
 div#scrolltableft{
 	position:absolute;
-	top: -12px;
+	top: -14px;
 	left: 18px;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:10px;
@@ -75,7 +75,7 @@ div#scrolltableft{
 
 div#scrolltabright{
 	position:absolute;
-	top: -12px;
+	top: -13px;
 	right: 0px;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:10px;	
